@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.473 2005/12/20 16:25:18 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.474 2005/12/20 16:28:03 wolf31o2 Exp $
+
+  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/sh.py,
+  modules/generic_stage_target.py:
+  Updated sh support from Mike Frysinger <vapier@gentoo.org> and closing bug
+  #115866.
 
   20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/functions.sh:
